syntax = "proto3";

import "common_request.proto";
import "status_reply.proto";

option java_multiple_files = true;
option java_package = "com.yelixian.beiqi.proto";
option java_outer_classname = "MessageProto";
option objc_class_prefix = "BQ";

package beiqi;

//消息相关接口
service Message {
    //获取消息列表
    rpc GetMessageList (CommonRequest) returns (MessageListReply) {}
    //标记消息为已读
    rpc MarkMessageRead (MessageIdRequest) returns (StatusReply) {}
    //推送消息，客户端先发出要求，建立长链接，hold住不放，服务器端有消息时就推送；每收到一条消息，客户端应回应收到消息的id，服务器端便不再发送
    rpc PushMessage (stream MessageRequest) returns (stream MessageObj) {}
}

//消息对象
message MessageObj {
    //全局唯一id
    int32 id = 1;
    //内容
    string content = 2;
    //类型，可作为缩略标题使用
    string type = 3;
    //详情外链url
    string link_url = 4;
    //消息发出者
    string producer = 5;
    //消息生成时间
    int32 created_timestamp = 6;
    //消息初次阅读时间
    int32 read_timestamp = 7;
}

//获取消息列表 response
message MessageListReply {
    //消息列表
    repeated MessageObj message_list = 1;
    //错误码
    int32 err_code = 2;
    //错误信息
    string err_message = 3;
}

//传入消息ID的简单request
message MessageIdRequest {
    //消息ID，全局唯一
    int32 id = 1;
    //基础request包
    CommonRequest common_request = 2;
}

//消息推送request
message MessageRequest {
    //最新一条收到的消息ID，全局唯一
    int32 latest_message_id = 1;
    //接收方式，有可能是推送接收、批量获取
    string type = 2;
    //错误码
    int32 err_code = 3;
    //错误信息
    string err_message = 4;
}
